cabal-version:       >=1.10

name:                klmc
version:             0.1.0.0
synopsis: Make your own keyboard layout!
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Thibault Polge
maintainer:          thibault@thb.lt
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     KLMC.Keys
                       KLMC.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
                     , containers
                     , data-default
                     , mtl
  hs-source-dirs: src
  default-language:    Haskell2010
